# wust-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
docker/dev/: README.md  docker-compose.yml
migration/: Cargo.toml
src/: main.rs
src/controllers/: comments.rs  episodes.rs  mod.rs  series.rs
src/controllers/helpers/: episodes_helper.rs  mod.rs  series_helper.rs
src/database/: authors.rs  comments.rs  connect.rs  episodes.rs  genres.rs  mod.rs  prelude.rs  series.rs
src/entity/: mod.rs  prelude.rs  wf_abonnements.rs  wf_admins.rs  wf_amis.rs  wf_amis_actions.rs  wf_amis_actions_types.rs  wf_amis_aimes.rs  wf_amis_bonus.rs  wf_amis_ips.rs  wf_amis_notifications.rs  wf_amis_preferences.rs  wf_amis_souvenirs.rs  wf_amis_suivis.rs  wf_amis_webtoons.rs  wf_annonces.rs  wf_auteurs.rs  wf_bcross_selling.rs  wf_bg_profile.rs  wf_bonus.rs  wf_bonus_uniques.rs  wf_carrousels.rs  wf_coms.rs  wf_csv_amis.rs  wf_genres.rs  wf_magazine.rs  wf_magazine_block_type.rs  wf_magazine_episodes.rs  wf_magazine_revision.rs  wf_magazine_revision_block.rs  wf_news.rs  wf_notifications.rs  wf_objets_types.rs  wf_objets_types_ids.rs  wf_portal_logs.rs  wf_portefeuilles.rs  wf_pouces.rs  wf_saisons.rs  wf_series.rs  wf_series_auteurs.rs  (+15 more)
src/macros/: mod.rs
src/models/: authors.rs  comments.rs  episodes.rs  genres.rs  mod.rs  prelude.rs  series.rs
src/oauth/: jwt.rs
src/router/: handler.rs  mod.rs  responses.rs
tools/jwt_eckle_node/: README.md  create_jwt.sh  package-lock.json  package.json
tools/jwt_gen/: Cargo.toml  README.md  jwtgen.sh
(+4 files in other folders)
